--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = bbsspider.settings
+default = byrbbs.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = bbsspider
+project = byrbbs
